--- a/src/scss/css-variables/_colors.scss
+++ b/src/scss/css-variables/_colors.scss
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #25BB94;
+  --main-color: #000;
   --secondary-color: #dafbe6;
   --body-color: #f9f9f9;
   --title-grey: #a9abac;
