--- a/src/css/tcctxh.css
+++ b/src/css/tcctxh.css
@@ -218,3 +218,11 @@
   background-color: #21a885;
   border-color: #21a885;
 }
+.pi-angle-left-active {
+  transform: rotate(-180deg);
+  transition: transform 0.4s ease;
+}
+.pi-angle-up-active {
+  transform: rotate(0deg);
+  transition: transform 0.4s ease;
+}
